[package]
name = "gatekeeper-members"
version = "0.1.0"
edition = "2018"
authors = ["Mary Strodl <ipadlover8322@gmail.com>"]
license = "MIT"
description = "Library for member projects to read and resolve Gatekeeper tags"
repository = "https://github.com/mstrodl/gatekeeper-members"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
serde_json = "1.0.64"
libgatekeeper-sys = "0.2.0"
# libgatekeeper-sys = {path = "../../libgatekeeper-sys"}
serde = { version = "1.0.126", features = ["derive"] }
